# keybox-downloader

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  install.py  main.py  notes.md  pyproject.toml  requirements.android.txt  requirements.dev.txt  requirements.pc.txt  requirements.txt  ruff.toml  todo.md
.github/workflows/: build.yml
cache_data/: __init__.py  basedata.py  manifest.py  overrides.py
downloaders/: __init__.py  alwaysstrong.py  downloader.py  droidwin.py  fixintegrity.py  integritybox.py  play_integrityfix.py  specter.py  trickyaddon.py  tsupport.py  yurikey.py
program/: __init__.py  action.py  dialog.py  eventmap.py  install.py  keybox.py  keytype.py  options.py  scrollable.py
schemas/: attestation.json
scripts/: install_android.sh  install_keybox.sh
types_def/: __init__.py  cache.py
utils/: certs.py  duplicate.py  googlecheck.py  keybox.py  openssl.py  shellvar.py
verify/: googlecheck.py
