[project]
name = "keybox-downloader"
version = "1.0.0"
description = "Downloads TrickyStore Keyboxes from GitHub projects"
requires-python = ">=3.12"
dependencies = [
    "asyncstdlib>=3.14.0",
    "beautifulsoup4>=4.15.0",
    "cloudscraper>=1.2.71",
    "cryptography==49.0.0", # Needed for Android!
    "httpx2[brotli,http2,zstd]>=2.5.0",
    "pillow==12.3.0",
    "poethepoet==0.48.0",
    "prompt-toolkit>=3.0.52",
    "pydantic==2.12.5", # Needed for Android!
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tqdm==4.68.4",
]

[project.optional-dependencies]
dev = [
    "python-dotenv[cli]>=1.2.2",
    "ruff>=0.15.20",
]

pc = [
    "adbutils>=2.12.0",
]

# nuitka uses imageio to convert png -> ico
# pyinstaller uses pillow to convert png -> ico
build = [
    "imageio>=2.37.3",
    "nuitka[app]",
    "pillow>=12.2.0",
    "poethepoet>=0.46.0",
    "pyinstaller>=6.21.0",
]

[tool.poe.tasks]
build_nuitka = """
    nuitka
    --clang
    --lto=auto
    --include-distribution-metadata=keybox-downloader
    --mode=onefile
    --include-data-dir=scripts=scripts
    --include-package-data=cloudscraper
    --onefile-no-compression
    --enable-plugin=upx
    main.py
"""
build_pyinstaller = """
    pyinstaller
    --copy-metadata keybox-downloader
    --onefile
    --add-data "scripts:scripts"
    main.py
"""
build_github = """
    pyinstaller
    --copy-metadata keybox-downloader
    --onefile
    --add-data "scripts:scripts"
    --icon=images/key-icon.png
    --name=KeyDL
    main.py
"""

[tool.setuptools.packages.find]
include = [
    "program*",
    "downloaders*",
    "cache_data*",
]
exclude = [
    "logs*",
    "cache*",
    "backups*",
    "keyboxes*",
]

[tool.uv]
package = true
exclude-newer = "7 days"

[tool.uv.sources]
nuitka = { git = "https://github.com/Nuitka/Nuitka.git", rev = "develop" }
pydantic-core = [
    { index = "pydantic", marker = "platform_system == 'Android' and python_version == '3.14'" },
    { index = "pypi", marker = "platform_system != 'Android'" },
]

[[tool.uv.index]]
name = "pydantic"
url = "https://labs.nticompassinc.com/idk-lol/repo/"
