[project]
name = "keybox-downloader"
version = "1.0.0"
description = "Downloads TrickyStore Keyboxes from GitHub projects"
requires-python = "~=3.14.0"
dependencies = [
    "asyncstdlib>=3.14.0",
    "beautifulsoup4>=4.15.0",
    "cloudscraper>=1.2.71",
    "httpx2[brotli,http2,zstd]==2.8.0",
    "prompt-toolkit>=3.0.52",
    # On Android, I have a pre-built wheel of `pydantic-core==2.41.5` (for `pydantic==2.12.5`)
    "pydantic==2.12.5; platform_system == 'Android'",
    "pydantic>=2.13.4, <2.14.0a1; platform_system != 'Android'", # Don't install "alpha" version
    "pydantic-core==2.41.5; platform_system == 'Android'",
    "pydantic-core>=2.46.4, <2.47.0; platform_system != 'Android'", # 2.47.0 is for pydantic 2.14.0a1
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tqdm>=4.69.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv[cli]>=1.2.2",
    "ruff>=0.15.22",
]

pc = [
    "adbutils>=2.12.0",
    # Make sure to install `python-cryptography` on Android
    "cryptography>=49.0.0",
]

# nuitka uses imageio to convert png -> ico
# pyinstaller uses pillow to convert png -> ico
build = [
    "imageio>=2.37.4",
    "nuitka[app]",
    "pillow>=12.2.0",
    "poethepoet>=0.46.0",
    "pyinstaller>=6.21.0",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.poe.tasks]
build_nuitka = """
    nuitka
    --clang
    --lto=auto
    --include-distribution-metadata=keybox-downloader
    --mode=onefile
    --include-data-dir=scripts=scripts
    --include-package-data=cloudscraper
    --onefile-no-compression
    --enable-plugin=upx
    main.py
"""
build_pyinstaller = """
    pyinstaller
    --copy-metadata keybox-downloader
    --onefile
    --add-data "scripts:scripts"
    main.py
"""
build_github = """
    pyinstaller
    --copy-metadata keybox-downloader
    --onefile
    --add-data "scripts:scripts"
    --icon=images/key-icon.png
    --name=KeyDL
    main.py
"""

[tool.setuptools.packages.find]
include = [
    "program*",
    "downloaders*",
    "cache_data*",
]
exclude = [
    "logs*",
    "cache*",
    "backups*",
    "keyboxes*",
]

[tool.uv]
package = true
# exclude-newer = "7 days"

[tool.uv.sources]
nuitka = { git = "https://github.com/Nuitka/Nuitka.git", rev = "develop" }
pydantic-core = { index = "labs", marker = "platform_system == 'Android'" }

[[tool.uv.index]]
name = "labs"
# Actual wheels are from https://github.com/tur-pypi-dists/python3.14-pydantic_core/releases/tag/v2.41.5
url = "https://labs.nticompassinc.com/idk-lol/repo/"
explicit = true
