[project]
name = "keybox-downloader"
version = "1.0.0"
description = "Downloads TrickyStore Keyboxes from GitHub projects"
requires-python = "~=3.14.0"
dependencies = [
    "anyio>=4.14.2",
    "asyncstdlib>=3.14.0",
    "beautifulsoup4>=4.15.0",
    "cloudscraper>=1.2.71",
    "httpx2[brotli,http2,zstd]>=2.9.1",
    "prompt-toolkit>=3.0.52",
    # On Android, I have a pre-built wheel of `pydantic-core==2.41.5` (for `pydantic==2.12.5`)
    "pydantic==2.12.5; platform_system == 'Android'",
    "pydantic>=2.13.4, <2.14.0a1; platform_system != 'Android'", # Don't install "alpha" version
    "pydantic-core==2.41.5; platform_system == 'Android'",
    "pydantic-core>=2.46.4, <2.47.0; platform_system != 'Android'", # 2.47.0 is for pydantic 2.14.0a1
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tqdm>=4.69.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv[cli]>=1.2.2",
    "ruff>=0.16.0",
]

pc = [
    "adbutils>=2.12.0",
    # Make sure to install `python-cryptography` on Android
    "cryptography>=49.0.0",
]

# nuitka uses imageio to convert png -> ico
# pyinstaller uses pillow to convert png -> ico
build = [
    "imageio>=2.37.4",
    "nuitka[app]",
    "pillow>=12.2.0",
    "poethepoet>=0.46.0",
    "pyinstaller>=6.21.0",
]

licenses = [
    "pip-licenses>=5.0.0",
    "poethepoet>=0.46.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
unfixable = []
preview = true
ignore = [
    # Incompatible with Ruff formatter
    "COM812",
    "ISC001",
    # Mutually exclusive pydocstyle rules
    "D203",
    "D213",
    # Personal code-style
    "TD002",
    "TD003",
    "G004",
    "PLW0603",
    "T201",
    # I should probably simplify `select_file()` at some point
    "PLR0914",
    "PLR0915",
    "PLW0717",
    "C901",
    # Allow `xml.etree.ElementTree`
    "S405",
    "S314",
    # Allow `subprocess`
    "S404",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.flake8-copyright]
author = "gen\\Eric Computers"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check . --fix"

licenses = """
    pip-licenses
    --ignore-packages keybox-downloader ruff imageio nuitka pillow poethepoet pyinstaller pastel pyyaml
    --from=meta
    --format=plain-vertical
    --with-urls
    --output-file=THIRD_PARTY_LICENSES.txt
"""

build_nuitka = """
    nuitka
    --clang
    --lto=auto
    --include-distribution-metadata=keybox-downloader
    --mode=onefile
    --include-data-dir=scripts=scripts
    --include-data-files=LICENSE=LICENSE
    --include-data-files=THIRD_PARTY_LICENSES.txt=THIRD_PARTY_LICENSES.txt
    --include-package-data=cloudscraper
    --onefile-no-compression
    --enable-plugin=upx
    main.py
"""

build_pyinstaller = """
    pyinstaller
    --copy-metadata keybox-downloader
    --onefile
    --add-data "scripts:scripts"
    --add-data "THIRD_PARTY_LICENSES.txt:."
    --add-data "LICENSE:."
    main.py
"""

build_github = """
    pyinstaller
    --copy-metadata keybox-downloader
    --onefile
    --add-data "scripts:scripts"
    --add-data "THIRD_PARTY_LICENSES.txt:."
    --add-data "LICENSE:."
    --icon=images/key-icon.png
    --name=KeyDL
    main.py
"""

[tool.setuptools.packages.find]
include = [
    "program*",
    "downloaders*",
    "cache_data*",
]
exclude = [
    "logs*",
    "cache*",
    "backups*",
    "keyboxes*",
]

[tool.uv]
package = true
# exclude-newer = "7 days"

[tool.uv.sources]
nuitka = { git = "https://github.com/Nuitka/Nuitka.git", rev = "develop" }
pydantic-core = { index = "labs", marker = "platform_system == 'Android'" }

[[tool.uv.index]]
name = "labs"
# Actual wheels are from https://github.com/tur-pypi-dists/python3.14-pydantic_core/releases/tag/v2.41.5
url = "https://labs.nticompassinc.com/idk-lol/repo/"
explicit = true
